--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "buf generate ../proto"
+    "test": "vitest run"
   },
   "dependencies": {
     "@connectrpc/connect-query": "^2.0.1",
